Add link and button CSS

--- a/newhome.html
+++ b/newhome.html
@@ -9,9 +9,9 @@ layout: plain
             <nav>
                 <ul class="flex items-center list-none">
                     <li class="mr-10"><svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="1.5"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-fingerprint"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M18.9 7a8 8 0 0 1 1.1 5v1a6 6 0 0 0 .8 3" /><path d="M8 11a4 4 0 0 1 8 0v1a10 10 0 0 0 2 6" /><path d="M12 11v2a14 14 0 0 0 2.5 8" /><path d="M8 15a18 18 0 0 0 1.8 6" /><path d="M4.9 19a22 22 0 0 1 -.9 -7v-1a8 8 0 0 1 12 -6.95" /></svg></li>
-                    <li class="mr-10"><a href="/projects">Projects</a></li>
-                    <li><a href="/about">About</a></li>
-                    <li class="ml-auto">Let's chat ↗</li>
+                    <li class="mr-10"><a class="link-underline" href="/projects">Projects</a></li>
+                    <li><a class="link-underline" href="/about">About</a></li>
+                    <li class="ml-auto"><a class="link-underline" href="https://savvycal.com/jordanbowman/meeting">Let's chat ↗</a></li>
                 </ul>
             </nav>
             <!-- <div class="flex-1 text-right">
@@ -32,7 +32,7 @@ layout: plain
             <div class="md:col-span-3 col-span-full">
                 <p class="font-normal text-xl">I create art that is both aesthetically pleasing and emotionally resonant. I also design user interfaces that are intuitive and user-friendly.</p>
                 <div class="mt-4">
-                    <a class="inline-block mr-3 py-1 px-3 border-2 border-gray-800 border-solid rounded-full text-xs" style="border-radius: 999px;">
+                    <a href="https://www.linkedin.com/" class="inline-block mr-3 py-1 px-3 border-2 border-gray-800 border-solid rounded-full text-xs hover:bg-gray-800 hover:text-white transition-colors" style="border-radius: 999px;">
                         <div class="flex items-center gap-1">
                             <div>
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor"
@@ -49,7 +49,7 @@ layout: plain
                             <div class="font-mono">LinkedIn</div>
                         </div>
                     </a>
-                    <a class="inline-block mr-3 py-1 px-3 border-2 border-gray-800 border-solid rounded-full text-xs" style="border-radius: 999px;">
+                    <a href="https://www.linkedin.com/" class="inline-block mr-3 py-1 px-3 border-2 border-gray-800 border-solid rounded-full text-xs hover:bg-gray-800 hover:text-white transition-colors" style="border-radius: 999px;">
                         <div class="flex items-center gap-1">
                             <div>
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
@@ -66,7 +66,7 @@ layout: plain
                             <div class="font-mono">Twitter</div>
                         </div>
                     </a>
-                    <a class="inline-block mr-3 py-1 px-3 border-2 border-gray-800 border-solid rounded-full text-xs" style="border-radius: 999px;">
+                    <a href="https://www.linkedin.com/" class="inline-block mr-3 py-1 px-3 border-2 border-gray-800 border-solid rounded-full text-xs hover:bg-gray-800 hover:text-white transition-colors" style="border-radius: 999px;">
                         <div class="flex items-center gap-1">
                             <div>
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
@@ -90,8 +90,6 @@ layout: plain
 </section>
 
 <!-- Values -->
-<!-- Make little handwriting flourishes appear when you hover over cards -->
-<!-- Mobile: Cards stack as you scroll like Givingli? https://www.youtube.com/watch?v=4oPAULoBJ74 -->
 <section>
     <div class="container px-5 pb-24 max-w-screen-2xl mx-auto">
         <!-- <div class="max-w-160 mb-8">
@@ -160,7 +158,7 @@ layout: plain
                     <img src="https://cdn.prod.website-files.com/63dae19244d432799bf5baa4/63e083f447ab584c75ba3c35_cutting%20edge.svg"
                         loading="lazy" alt="">
                     <div class="flex justify-end flex-col flex-1">
-                        <p class="text-2xl font-bold font-display">Take ownership</p>
+                        <p class="text-2xl font-bold font-display">Be a problem solver</p>
                         <p class="mt-4">Explore. Adapt. Stay curious. Our team lives by these values, designing to inspire and create a
                             better, more interesting world.</p>
                     </div>
@@ -177,7 +175,6 @@ layout: plain
 </section>
 
 <!-- Projects -->
-<!-- Need a little hover for links, maybe use UX Tools Challenges animations which as all CSS -->
 <section class="px-5">
     <div class="rounded-xl py-32" style="background-color: #F7D9D3; color: #37110A;">
         <div class="container px-8 max-w-screen-2xl mx-auto">
@@ -306,7 +303,7 @@ layout: plain
 </section>
 
 
-<!-- Skills, tools, capabilities, what I do -->
+<!-- Skills -->
 <section>
     <div class="container px-5 max-w-screen-2xl mx-auto">
         <div class="px-8">
@@ -346,9 +343,7 @@ layout: plain
 </section>
 
 
-<!-- Resume & credentials, education in little badges, including link to download -->
-<!-- Make it like a timeline -->
-<!-- https://drive.google.com/file/d/1xwxXfELpG2_iwUBR8MjUQ0BzADyjaJ5z/view -->
+<!-- Resume -->
 <section class="px-5 pb-5">
     <div class="rounded-xl py-60" style="background-color: #EAE7DC;">
         <div class="container px-8 max-w-screen-2xl mx-auto">
@@ -392,7 +387,6 @@ layout: plain
 
 
 <!-- Testimonials -->
-<!-- scrolling overflow off the page -->
 <section>
     <div class="container px-5 max-w-screen-2xl mx-auto">
         <div class="px-8">
@@ -405,17 +399,15 @@ layout: plain
 </section>
 
 
-<!-- Footer, social , contact -->
-<!-- "Let's build something together" scrolling -->
+<!-- Footer -->
 <footer class="px-5 pb-5">
     <div class="rounded-xl py-60" style="background-color: #233B38; color: #E9EFEE;">
         <div class="container px-8 max-w-screen-2xl mx-auto">
             <!-- CTA -->
-            <!-- Let's talk -->
             <p class="text-5xl text-center font-bold font-display mb-12">Let's build something together</p>
-            <div class="rounded-xl text-center p-8 bg-white" style="color: #233B38">
+            <a href="https://savvycal.com/jordanbowman/meeting" class="block rounded-xl text-center p-8 bg-white" style="color: #233B38">
                 <p class="text-4xl font-bold">Schedule a call →</p>
-            </div>
+            </a>
         </div>
     </div>
 </footer>
